@@ -930,18 +930,11 @@ Tcl_AttemptSetObjLength(
 
 	if (objPtr->bytes != tclEmptyStringRep) {
 	    newBytes = attemptckrealloc(objPtr->bytes, (unsigned) length+1);
-	    if (newBytes == NULL) {
-		return 0;
-	    }
 	} else {
 	    newBytes = attemptckalloc((unsigned) length+1);
-	    if (newBytes == NULL) {
-		return 0;
-	    }
-	    if (objPtr->bytes != NULL && objPtr->length != 0) {
-		memcpy(newBytes, objPtr->bytes, (size_t) objPtr->length);
-		TclInvalidateStringRep(objPtr);
-	    }
+	}
+	if (newBytes == NULL) {
+	    return 0;
 	}
 	objPtr->bytes = newBytes;
 	stringPtr->allocated = length;
